--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
-    "html-react-parser": "^5.1.16",
+    "html-react-parser": "^5.1.17",
     "isbot": "^4.1.0",
+    "match-sorter": "^6.3.4",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-utils": "^7.7.0",
     "sort-by": "^0.0.2",
     "tiny-invariant": "^1.3.3"
   },
