--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "dev": "tsx server/index.ts",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "cross-env NODE_ENV=production node ./build/server/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@remix-run/express": "^2.12.1",
     "@remix-run/node": "^2.12.1",
-    "@remix-run/react": "^2.12.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
@@ -28,9 +28,14 @@
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@remix-run/dev": "^2.12.1",
+    "@remix-run/react": "^2.12.1",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.13",
     "@types/morgan": "^1.9.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -44,8 +49,11 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.2.5",
     "tsx": "^4.19.1",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
