--- a/package.json
+++ b/package.json
@@ -59,7 +59,11 @@
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+  },
   "engines": {
     "node": "20.x"
   }
 }
+
